mat form field label alignment fix

--- a/apps/web-giddh/src/assets/css/style-1.scss
+++ b/apps/web-giddh/src/assets/css/style-1.scss
@@ -3286,8 +3286,8 @@ input-field {
             min-height: 3rem;
             align-items: center;
             border-radius: 0.5rem;
-            padding-left: 1rem;
-            padding-right: 1rem;
+            padding-left: 0;
+            padding-right: 0;
         }
         .mat-form-field-infix {
             display: flex;
@@ -3315,6 +3315,7 @@ input-field {
         .mat-form-field-label {
             margin-top: 1px;
             font-size: var(--font-size-15);
+            padding-left: 14px;
         }
         .mat-form-field-wrapper {
             margin: 0;
@@ -3340,6 +3341,7 @@ input-field {
             &.mat-form-field-should-float {
                 .mat-form-field-label {
                     transform: translateY(-1.5em) scale(0.75) !important;
+                    padding-left: 21px;
                 }
             }
         }
@@ -3348,6 +3350,7 @@ input-field {
                 &:focus + .mat-form-field-label-wrapper {
                     .mat-form-field-label {
                         transform: translateY(-1.5em) scale(0.75) !important;
+                        padding-left: 21px;
                     }
                 }
             }
